--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.2.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
